ifupdown (0.8.24) UNRELEASED; urgency=medium

  [ Svante Signell ]
  * Fix FTBFS on hurd-i386 and kfreebsd-any. Closes: #869954

 -- Guus Sliepen <guus@debian.org>  Fri, 28 Jul 2017 12:15:27 +0200

ifupdown (0.8.23) unstable; urgency=medium

  * Handle interface renaming in the ifupdown-hotplug script. Closes: #869275
  * Fix typo in the manpage. Closes: #869276

 -- Guus Sliepen <guus@debian.org>  Mon, 24 Jul 2017 13:03:31 +0200

ifupdown (0.8.22) unstable; urgency=medium

  * Support interface renaming.
  * Add ifupdown-wait-online.service. Closes: #868650

 -- Guus Sliepen <guus@debian.org>  Sat, 22 Jul 2017 01:10:34 +0200

ifupdown (0.8.21) unstable; urgency=medium

  * Ensure allow-* also allows pattern matching. Closes: #868493

 -- Guus Sliepen <guus@debian.org>  Sun, 16 Jul 2017 13:38:59 +0200

ifupdown (0.8.20) unstable; urgency=medium

  * Change udevadm path to /bin/udevadm. Closes: #852559
  * Add initial pattern matching support.
  * Bump Standards-Version.

 -- Guus Sliepen <guus@debian.org>  Sat, 15 Jul 2017 22:01:17 +0200

ifupdown (0.8.19) unstable; urgency=medium

  * Fix exit code of ifquery --state. Closes: #852976

 -- Guus Sliepen <guus@debian.org>  Mon, 30 Jan 2017 14:32:18 +0100

ifupdown (0.8.18) unstable; urgency=medium

  [ Svante Signell ]
  * Makefile: Add removal of tests/*/state.* directories in the clean target.
  * Update testcases for GNU/Hurd.

  [ Guus Sliepen ]
  * Use dynamically allocated strings for filenames. This avoids using
    PATH_MAX, which caused a FTBFS on Hurd. Based on Svante's patch.
    Closes: #845140
  * Fix some memory leaks.
  * Improve error messages.
  * Always immediately quit when running out of memory.

 -- Guus Sliepen <guus@debian.org>  Wed, 11 Jan 2017 20:43:06 +0100

ifupdown (0.8.17) unstable; urgency=medium

  [ Scott Moser ]
  * Don't bring down the loopback interface when networking.service stops.
    Closes: #841106, #841107

  [ Guus Sliepen ]
  * Export $CLASS to scripts.
  * Add a bug-script.